--- a/src/visao/CriarOrdemServico.form
+++ b/src/visao/CriarOrdemServico.form
@@ -525,14 +525,14 @@
                       <Component id="txtData" min="-2" pref="26" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="dataSaida" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
-                      <Component id="jButton2" pref="35" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                      <Component id="jButton2" pref="38" max="32767" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="jButton1" pref="35" max="32767" attributes="0"/>
+                      <Component id="jButton1" pref="38" max="32767" attributes="0"/>
                       <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
-                      <Component id="jButton3" pref="35" max="32767" attributes="0"/>
+                      <Component id="jButton3" pref="38" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
